--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
 	<!-- header 
    ================================================== -->
    <header>   	
-		<div id="nav">
+		<nav id="main-nav-wrap">
 			<ol>
 				<li> <a href="#about">INICIO</a> </li>
 				<li> <a href="#resume">Asesoría</a> </li>
