--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Simon Rodriguez</title>
+	<title>Oferta Asesoría ABA Simon Rodriguez</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
